# flee

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-in-docker.sh  build.sh  lint.sh  main.c  relic.cmake  tun.c  util.c  vendor.cmake
GUI/macOS/: lint.sh
GUI/macOS/FleeGUI/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
GUI/macOS/FleeGUI.xcodeproj/: project.pbxproj
GUI/macOS/FleeGUI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GUI/macOS/FleeGUI/Base.lproj/: Main.storyboard
GUI/macOS/FleeTunnel/: FLTunnelProvider.h  FLTunnelProvider.m  Info.plist
flee.xcodeproj/: project.pbxproj
flee.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: flee.h
include/flee/: client.h  common.h  crypto.h  error.h  internal.h  tun.h  util.h
resources/flee-build/: Dockerfile  build.sh
src/: client.c  common.c  crypto.c  fled.c  flee.c  main.c  tun.c  util.c
